--- a/src/app/features/pokemon-list/pokemon-list.component.html
+++ b/src/app/features/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,6 @@
-<p>pokemon-list works!</p>
+<div class="pokemon-list">
+    <div *ngFor="let pokemon of pokemons" [appHighlightFavorite]="isPokemonFavorite(pokemon)">
+      <!-- Conteúdo do card do Pokémon -->
+    </div>
+  </div>
+  
