--- a/src/app/features/pokemon-favorites/pokemon-favorites.component.html
+++ b/src/app/features/pokemon-favorites/pokemon-favorites.component.html
@@ -1,1 +1,5 @@
-<p>pokemon-favorites works!</p>
+<div class="row">
+  <!--<div class="col-md-4" *ngFor="let favoritePokemon of favoritePokemons">
+      <app-pokemon-card [pokemon]="favoritePokemon"></app-pokemon-card>
+    </div>-->
+</div>
